# erasure-coding-crust

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  cbindgen.toml
benchmark/: CMakeLists.txt  benchmark.cpp
cmake/: erasure_coding_crustConfig.cmake  functions.cmake  rust.cmake
ec-cpp/: CMakeLists.txt  additive_fft.hpp  ec-cpp.cpp  ec-cpp.hpp  errors.hpp  f2e16.hpp  math.hpp  poly_encoder.hpp  reed-solomon.hpp  table_f2e16.hpp  types.hpp  walsh.hpp
include/ec-cpp/: additive_fft.hpp  ec-cpp.hpp  errors.hpp  f2e16.hpp  math.hpp  poly_encoder.hpp  reed-solomon.hpp  types.hpp  walsh.hpp
src/: erasure_coding.rs  lib.rs
test/: CMakeLists.txt
test/erasure_coding/: reconstruct.cpp
